fix: add overflow hidden

--- a/singolo1.css
+++ b/singolo1.css
@@ -241,6 +241,10 @@ body {
   margin-right: 20px;
 }
 
+.services__text {
+  overflow: hidden;
+}
+
 .services__text p {
   margin-top: 7px;
   line-height: 1.8;
